tests/errors/runtime.UncaughtError.1.res
0
1
2
>> Runtime | File: runtime.UncaughtError.1.art
     error | Line: 4
           | 
           | Uncaught system exception:
           | division by zero